@startuml

title __EXAMPLE's Class Diagram__\n

  namespace  {
    namespace rg.cloudbus.cloudsim {
      namespace sdn {
        namespace graph.example {
          class org.cloudbus.cloudsim.sdn.graph.example.GraphicSDN {
              - btnRun : JButton
              - contentPane : JPanel
              - deploymentFile : String
              - graph : JPanel
              - mode : String
              - panel : JPanel
              - physicalTopologyFile : String
              {static} - serialVersionUID : long
              - workloads : String
              - workloads_background : String
              + GraphicSDN()
              + initUI()
              {static} + main()
              - checkImportStatus()
              - doPosition()
              - importFile()
              - initBar()
              - initGraph()
              - openAddPhysicalEdgeDialog()
              - openAddPhysicalNodeDialog()
              - openAddVirtualEdgeDialog()
              - openAddVirtualNodeDialog()
              - saveFile()
              {static} - setUIFont()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace rg.cloudbus.cloudsim {
      namespace sdn {
        namespace graph.example {
          class org.cloudbus.cloudsim.sdn.graph.example.GraphicSDNExample {
              + fFloat : String
              + fInt : String
              + fString : String
              + indent : String
              + tabSize : String
              - deploymentFile : String
              - finishTime : double
              - outputArea : JTextArea
              - physicalTopologyFile : String
              - startTime : double
              - workloads : String
              - workloads_background : String
              + GraphicSDNExample()
              + output()
              + simulate()
              - append()
              - createBroker()
              - createSDNDatacenter()
              - printCloudlet()
              - printCloudletList()
              - printEnergyConsumption()
              - printHostUtilizationHistory()
              - printRequest()
              - printRequestTitle()
              - printWorkloadList()
          }
        }
      }
    }
  }
  

  org.cloudbus.cloudsim.sdn.graph.example.GraphicSDN -up-|> javax.swing.JFrame
  org.cloudbus.cloudsim.sdn.graph.example.GraphicSDN o-- org.cloudbus.cloudsim.sdn.graph.core.GraphView : physicalCanvas
  org.cloudbus.cloudsim.sdn.graph.example.GraphicSDN o-- org.cloudbus.cloudsim.sdn.graph.core.Graph : physicalGraph
  org.cloudbus.cloudsim.sdn.graph.example.GraphicSDN o-- org.cloudbus.cloudsim.sdn.graph.core.GraphView : virtualCanvas
  org.cloudbus.cloudsim.sdn.graph.example.GraphicSDN o-- org.cloudbus.cloudsim.sdn.graph.core.Graph : virtualGraph
  org.cloudbus.cloudsim.sdn.graph.example.GraphicSDNExample o-- org.cloudbus.cloudsim.sdn.example.SDNBroker : broker
  org.cloudbus.cloudsim.sdn.graph.example.GraphicSDNExample o-- org.cloudbus.cloudsim.sdn.example.SimpleNetworkOperatingSystem : nos


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
